--- a/springboot/mer/build.gradle
+++ b/springboot/mer/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-    
+    implementation 'org.springframework.security:spring-security-crypto'
+
     compile 'io.jsonwebtoken:jjwt:0.9.1'
     //runtime 'io.jsonwebtoken:jjwt-impl:0.11.2',
             // #Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
