--- a/springboot/mer/src/main/resources/application.properties
+++ b/springboot/mer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 5001
 #DB 연동
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=1673
 
 #JPA 설정
 #Dialect 설정
