--- a/springboot/mer/build.gradle
+++ b/springboot/mer/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.security:spring-security-crypto'
 
     compile 'io.jsonwebtoken:jjwt:0.9.1'
+    compile 'org.springframework.kafka:spring-kafka'
     //runtime 'io.jsonwebtoken:jjwt-impl:0.11.2',
             // #Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
             //#'org.bouncycastle:bcprov-jdk15on:1.60',
