#28 회원가입시 비밀번호 AES 암호화 & smtp_info 테이블 삽입

--- a/springboot/mer/src/main/resources/application.properties
+++ b/springboot/mer/src/main/resources/application.properties
@@ -2,9 +2,12 @@
 server.port = 5001
 
 #DB 연동
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=1673
+spring.datasource.url=jdbc:postgresql://52.231.73.1:5432/redteam
+#jdbc:postgresql://52.231.73.1/redteam
+spring.datasource.username=redteam
+#postgres
+spring.datasource.password=dkagh1234!
+#1673
 
 #JPA 설정
 #Dialect 설정
