#121 | 악성메일 결과보고서 엑셀 다운로드 기능 구현

--- a/springboot/mer/src/main/resources/application.properties
+++ b/springboot/mer/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port = 5001
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://52.231.73.1:5432/redteam
+spring.datasource.url=jdbc:postgresql://20.194.16.227:5432/redteam
 spring.datasource.username=redteam
 spring.datasource.password=dkagh1234!
 spring.datasource.maximumPoolSize=5
@@ -41,6 +41,6 @@ spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.Str
 spring.kafka.producer.value-serializer = org.springframework.kafka.support.serializer.JsonSerializer
 
 #변수 설정
-Key = qlwkndlqiwndliansdlnqwd
+Key = qwdqwd12d1qwdqwd
 AESiv = 0987654321654321
 
