--- a/springboot/mer/build.gradle
+++ b/springboot/mer/build.gradle
@@ -25,7 +25,8 @@ dependencies {
     implementation 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.security:spring-security-crypto'
-
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+    
     compile 'io.jsonwebtoken:jjwt:0.9.1'
     compile 'org.springframework.kafka:spring-kafka'
     //runtime 'io.jsonwebtoken:jjwt-impl:0.11.2',
