아이콘 누를경우 메인화면으로 이동

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ package-lock.json
 kafka
 Spreadsheet/Target_PL.xlsx
 springboot/logs/spring.log
+springboot/mer_consumer0402
+springboot/mer0402
 logfile.log
